Fix the leak when deserializing maps

The deserialized map value of message type needs explicit delete
after assignment. The value is owned by QHash, but since we use the
QHash implict sharing it's necessary to free the memory allocated
by deserializeObject explicitly after the copy assignment.

Fixes: QTBUG-120227
Pick-to: 6.5 6.6 6.7
Change-Id: Ibe286f5252a4ab5a1f661c271c426b910e6c28af
Reviewed-by: Tatiana Borisova <tatiana.borisova@qt.io>