src/protobuf/qprotobufbaseserializer.h
@@ -238,11 +238,13 @@ void deserializeMap(const QProtobufBaseSerializer *serializer, QVariant &previou
     QVariant key = QVariant::fromValue<K>(K());
     QVariant value = QVariant::fromValue<V *>(nullptr);
 
-    if (serializer->deserializeMapPair(key, value)) {
-        const auto valuePtr = value.value<V *>();
+    bool ok = serializer->deserializeMapPair(key, value);
+    V *valuePtr = value.value<V *>();
+    if (ok) {
         out[key.value<K>()] = valuePtr ? *valuePtr : V();
         previous = QVariant::fromValue<QHash<K, V>>(out);
     }
+    delete valuePtr;
 }
 
 /*!
